# Lab01_PART2_18107162

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
infra/: init-metabase-db.sql  metabase_dashboard_queries.sql
infra/grafana/dashboards/: combustiveis_gold.json
infra/grafana/provisioning/dashboards/: dashboard.yml
infra/grafana/provisioning/datasources/: datasource.yml
src/: main.py
src/data_sources/: anp_urls.py
src/extract/: extractor.py  loader.py
src/pipeline/: pipeline.py
src/quality/: validator.py
src/transform/gold/: schema_creator.py  transformer.py
src/transform/silver/: transformer.py
src/utils/: db_connections.py  db_functions.py
tests/unit/: test_extractor.py
