[project]
name = "lab01-part2-18107162"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.1",
    "great-expectations>=1.15.2",
    "numpy>=2.4.4",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "requests>=2.33.1",
]
[tool.pytest.ini_options]
pythonpath = ["src"]
